--- a/app/globals.css
+++ b/app/globals.css
@@ -4,24 +4,34 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 38px 40px 55px;
+}
+
+main {
+  display: flex; 
+  gap: 13px;
+}
+
+.main-section {
+  flex: 1 0 0;
+}
+
+.main-section .main-container {
+  margin-top: 27px;
+}
+
+.page-title {
+  color: #2A4357;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
 }
